[DATALAD] Added subdataset

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,8 @@
 	path = code/tacc-openneuro
 	url = https://github.com/poldracklab/tacc-openneuro.git
 	datalad-url = https://github.com/poldracklab/tacc-openneuro.git
+[submodule "sourcedata/raw"]
+	path = sourcedata/raw
+	url = https://github.com/OpenNeuroDatasets/ds001299.git
+	datalad-id = 01d83140-8863-11e8-9878-0242ac120025
+	datalad-url = https://github.com/OpenNeuroDatasets/ds001299.git
